Added styling and responsiveness

--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
             </div>
         </div>
         <div id="tip-output">
-            <div id="tip-amount">
+            <div class="tip-result-container" id="tip-amount">
                 <div id="tip-amount-person">
                     <p>Tip Amount</p>
-                    <p>/ person</p>
+                    <p class="per-person">/ person</p>
                 </div>
-                <p>$ 0.00</p>
+                <p class="result">$ 0.00</p>
             </div>
-            <div id="total-amount">
+            <div class="tip-result-container" id="total-amount">
                 <div id="total-amount-person">
                     <p>Total Amount</p>
-                    <p>/ person</p>
+                    <p class="per-person">/ person</p>
                 </div>
-                <p>$ 0.00</p>
+                <p class="result">$ 0.00</p>
             </div>
             <button type="reset">RESET</button>
         </div>
