--- a/index.html
+++ b/index.html
@@ -6,63 +6,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tipping Calculator</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
   </head>
 
   <body>
     <main class="container">
-        <div id="tip-inputs">
-            <div class="input-group" id="bill-container">
-                <label for="bill-amount">Bill</label>
-                <input
+        <form>
+            <div id="tip-inputs">
+                <div class="input-group" id="bill-container">
+                    <label for="bill-amount">Bill</label>
+                    <input
+                        type="number"
+                        placeholder="0"
+                        min="0"
+                        dir="rtl"
+                        name="bill-amount"
+                        id="bill-amount"
+                    >
+                    </input>
+                </div>
+                <div id="tip-percentage-container">
+                    <label for="">Select Tip %</label>
+                    <div id="tip-button-container">
+                        <button class="tip-button" value="5" >5%</button>
+                        <button class="tip-button" value="10" >10%</button>
+                        <button class="tip-button" value="15" >15%</button>
+                        <button class="tip-button" value="25" >25%</button>
+                        <button class="tip-button" value="50" >50%</button>
+                        <button class="custom-tip-button">Custom</button>
+                    </div>
+                </div>
+                <div class="input-group" id="num-people-container">
+                    <label for="">Number of People</label>
+                    <input 
                     type="number"
-                    placeholder="0"
-                    min="0"
+                    placeholder="1"
+                    min="1"
                     dir="rtl"
-                    name="bill-amount"
-                    id="bill-amount"
-                >
-                </input>
-            </div>
-            <div id="tip-percentage-container">
-                <label for="">Select Tip %</label>
-                <div id="tip-button-container">
-                    <button>5%</button>
-                    <button>10%</button>
-                    <button>15%</button>
-                    <button>25%</button>
-                    <button>50%</button>
-                    <button>Custom</button>
+                    name="people-amount"
+                    id="people-amount" />
                 </div>
             </div>
-            <div class="input-group" id="num-people-container">
-                <label for="">Number of People</label>
-                <input 
-                type="number"
-                placeholder="0"
-                min="0"
-                dir="rtl"
-                name="people-amount"
-                id="people-amount" />
-            </div>
-        </div>
-        <div id="tip-output">
-            <div class="tip-result-container" id="tip-amount">
-                <div id="tip-amount-person">
-                    <p>Tip Amount</p>
-                    <p class="per-person">/ person</p>
+            <div id="tip-output">
+                <div class="tip-result-container" id="tip-amount">
+                    <div id="tip-amount-person">
+                        <p>Tip Amount</p>
+                        <p class="per-person">/ person</p>
+                    </div>
+                    <p id="tip-per-person" class="result">$ 0.00</p>
                 </div>
-                <p class="result">$ 0.00</p>
-            </div>
-            <div class="tip-result-container" id="total-amount">
-                <div id="total-amount-person">
-                    <p>Total Amount</p>
-                    <p class="per-person">/ person</p>
+                <div class="tip-result-container" id="total-amount">
+                    <div id="total-amount-person">
+                        <p>Total Amount</p>
+                        <p class="per-person">/ person</p>
+                    </div>
+                    <p id="total-per-person" class="result">$ 0.00</p>
                 </div>
-                <p class="result">$ 0.00</p>
+                <button id="reset-button" type="reset">RESET</button>
             </div>
-            <button type="reset">RESET</button>
-        </div>
+        </form>
     </main>
   </body>
 </html>
