Added custom tip functionality

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                         <button class="tip-button" value="15" >15%</button>
                         <button class="tip-button" value="25" >25%</button>
                         <button class="tip-button" value="50" >50%</button>
-                        <button class="custom-tip-button">Custom</button>
+                        <button id="custom-tip-button">
+                            <input type="number" id="custom-tip-input" placeholder="Custom">
+                        </button>
                     </div>
                 </div>
                 <div class="input-group" id="num-people-container">
