--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tipping Calculator</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet"
+          href=
+"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <script src="./index.js"></script>
   </head>
 
@@ -15,14 +19,17 @@
             <div id="tip-inputs">
                 <div class="input-group" id="bill-container">
                     <label for="bill-amount">Bill</label>
-                    <input
+                    <div class="input-icons">
+                        <i class="fa fa-usd icon"></i>
+                        <input
                         type="number"
                         placeholder="0"
                         min="0"
                         name="bill-amount"
                         id="bill-amount"
-                    >
-                    </input>
+                        >          
+                    </div>
+
                 </div>
                 <div id="tip-percentage-container">
                     <label for="">Select Tip %</label>
@@ -39,12 +46,16 @@
                 </div>
                 <div class="input-group" id="num-people-container">
                     <label for="">Number of People</label>
-                    <input 
-                    type="number"
-                    placeholder="1"
-                    min="1"
-                    name="people-amount"
-                    id="people-amount" />
+                    <div class="input-icons">
+                        <i class="fa fa-user icon"></i>
+                        <input 
+                        type="number"
+                        placeholder="1"
+                        min="1"
+                        name="people-amount"
+                        id="people-amount" />
+                    </div>
+
                 </div>
             </div>
             <div id="tip-output">
