--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
                     <div class="input-icons">
                         <i class="fa fa-usd icon"></i>
                         <input
-                        type="number"
+                        type="text"
                         placeholder="0"
                         min="0"
                         name="bill-amount"
                         id="bill-amount"
+                        autocomplete="off"
                         >          
                     </div>
 
@@ -40,7 +41,8 @@
                         <button class="tip-button" value="25" >25%</button>
                         <button class="tip-button" value="50" >50%</button>
                         <button id="custom-tip-button">
-                            <input type="number" id="custom-tip-input" placeholder="Custom">
+                            <input type="text" id="custom-tip-input" placeholder="Custom"
+                            autocomplete="off">
                         </button>
                     </div>
                 </div>
@@ -49,11 +51,12 @@
                     <div class="input-icons">
                         <i class="fa fa-user icon"></i>
                         <input 
-                        type="number"
+                        type="text"
                         placeholder="1"
                         min="1"
                         name="people-amount"
-                        id="people-amount" />
+                        id="people-amount"
+                        autocomplete="off" />
                     </div>
 
                 </div>
