Added challenge info

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="tip-result-container" id="total-amount">
                     <div id="total-amount-person">
-                        <p>Total Amount</p>
+                        <p>Total</p>
                         <p class="per-person">/ person</p>
                     </div>
                     <p id="total-per-person" class="result">$ 0.00</p>
